--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project is a platform designed for team-building by sharing playlists.",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
