--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/WildCodeSchool/reims-0218-artezicreloaded#readme",
   "dependencies": {
     "commitizen": "^2.9.6",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "sqlite": "^2.9.1"
   }
 }
