--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bluebird": "^3.5.1",
     "commitizen": "^2.9.6",
     "express": "^4.16.3",
-    "sqlite": "^2.9.1"
+    "sqlite": "^2.9.1",
+    "sqlite3": "^4.0.0"
   }
 }
