--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "bluebird": "^3.5.1",
     "commitizen": "^2.9.6",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sqlite": "^2.9.1",
     "sqlite3": "^4.0.0"
   },
